More books and papers

--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,50 @@
-@book{Myers:2004:AST:983238,
-    author = {Myers, Glenford J and Sandler, Corey},
-    isbn = {0471469122},
-    mendeley-groups = {Standard},
-    publisher = {John Wiley {\&} Sons},
-    title = {{The Art of Software Testing}},
-    year = {2004}
+@book{miller1977program,
+    author = {Miller, E.F. Jr.},
+    mendeley-groups = {Theory of Testing},
+    publisher = {IEEE Computer Society},
+    title = {{Tutorial: Program Testing Techniques}},
+    url = {https://books.google.co.th/books?id=EqrdjwEACAAJ},
+    year = {1977}
 }
 
+@article{Watson1996,
+    abstract = {The National Institute of Standards and Technology (NIST) has a unique responsibility for computer systems technology within the Federal government. NIST's Computer Systems Laboratory (CSL) develops standards and guidelines, provides technical assistance, and conducts research for computers and related telecommunications systems to achieve more effective utilization of Federal information technology resources. CSL's reponsibilities include development of technical, management, physical, and administrative standards and guidelines for the cost-effective security and privacy of sensitive unclassified information processed in federal computers. CSL assists agencies in developing security plans and in improving computer security awareness training. This Special Publication 500 series reports CSL research and guidelines to Federal agencies as well as to organizations in industry, gov-ernment, and academia. National Institute of Standards and Technology Special Publication 500-235 Natl. Inst. Stand. Technol. Spec. Publ. 500-235, 123 pages (September 1996) iii Abstract The purpose of this document is to describe the structured testing methodology for software testing, also known as basis path testing. Based on the cyclomatic complexity measure of McCabe, structured testing uses the control flow structure of software to establish path cover-age criteria. The resultant test sets provide more thorough testing than statement and branch coverage. Extensions of the fundamental structured testing techniques for integration testing and object-oriented systems are also presented. Several related software complexity metrics are described. Summaries of technical papers, case studies, and empirical results are presented in the appendices.},
+    author = {a.H. Watson and McCabe, T.J. and Wallace, D.R.},
+    doi = {800.638.6316},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Theory-of-Testing/mccabe-nist235r.pdf:pdf},
+    issn = {00831883},
+    journal = {NIST Special Publication},
+    mendeley-groups = {Standard},
+    number = {235},
+    pages = {1--114},
+    title = {{Structured Testing: A Testing Methodology Using the Cyclomatic Complexity Metric}},
+    url = {http://idldoc.idldev.com/export/628/tags/IDLDOC{\_}3{\_}1{\_}1/idldoc/project/nist235r.pdf},
+    volume = {500},
+    year = {1996}
+}
+
+@book{Jorgensen2013,
+    abstract = {This updated and reorganized fourth edition of Software Testing: A Craftsman's Approachapplies the strong mathematics content of previous editions to a coherent treatment of Model-Based Testing for both code-based (structural) and specification-based (functional) testing. These techniques are extended from the usual unit testing discussions to full coverage of less understood levels integration and system testing. The Fourth Edition: * Emphasizes technical inspections and is supplemented by an appendix with a full package of documents required for a sample Use Case technical inspection * Introduces an innovative approach that merges the Event-Driven Petri Nets from the earlier editions with the "Swim Lane" concept from the Unified Modeling Language (UML) that permits model-based testing for four levels of interaction among constituents in a System of Systems * Introduces model-based development and provides an explanation of how to conduct testing within model-based development environments * Presents a new section on methods for testing software in an Agile programming environment * Explores test-driven development, reexamines all-pairs testing, and explains the four contexts of software testing Thoroughly revised and updated, Software Testing: A Craftsman's Approach, Fourth Edition is sure to become a standard reference for those who need to stay up to date with evolving technologies in software testing. Carrying on the tradition of previous editions, it will continue to serve as a valuable reference for software testers, developers, and engineers.},
+    author = {Jorgensen, Paul},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Books/doc.pdf:pdf},
+    mendeley-groups = {Object Testing},
+    pages = {470},
+    publisher = {Auerbach Publications},
+    title = {{Softare Testing: A Craftman's Approach}},
+    year = {2013}
+}
+
+@book{Myers:2011:AST:983238,
+    abstract = {The classic, landmark work on software testing The hardware and software of computing have changed markedly in the three decades since the first edition of The Art of Software Testing, but this book's powerful underlying analysis has stood the test of time. Whereas most books on software testing target particular development techniques, languages, or testing methods, The Art of Software Testing, Third Edition provides a brief but powerful and comprehensive presentation of time-proven software testing approaches. If your software development project is mission critical, this book is an investment that will pay for itself with the first bug you find. The new Third Edition explains how to apply the book's classic principles to today's hot topics including: Testing apps for iPhones, iPads, BlackBerrys, Androids, and other mobile devices Collaborative (user) programming and testing Testing for Internet applications, e-commerce, and agile programming environments Whether you're a student looking for a testing guide you'll use for the rest of your career, or an IT manager overseeing a software development team, The Art of Software Testing, Third Edition is an expensive book that will pay for itself many times over.},
+    author = {Myers, Glenford J and Sandler, Corey and Badgett, Tom},
+    edition = {3},
+    isbn = {9781118031964},
+    mendeley-groups = {Standard},
+    pages = {256},
+    publisher = {John Wiley {\&} Sons},
+    title = {{The Art of Software Testing}},
+    year = {2011}
+}
 
 % - - - - - - - - - -
 % Call graph
