Add misc command

--- a/commands.tex
+++ b/commands.tex
@@ -1,5 +1,15 @@
 \newcommand{\FirstTimeDefine}[2]{#1\,(#2)}
 
+\newcommand{\code}[1]{\small{$#1$}}
+
+\newcommand{\figref}[1]{\figurename\ \ref{#1}\ }
+\newcommand{\figpageref}[1]{\figurename\ \ref{#1}\ (\pagename\ \pageref{#1})\ }
+
+\newcommand{\tabref}[1]{\tablename\ \ref{#1}\ }
+\newcommand{\tabpageref}[1]{\tablename\ \ref{#1}\ (\pagename\ \pageref{#1})\ }
+
+\newcommand{\eq}[1]{\ (\ref{#1})\ }
+
 \newcommand{\makethesiscover}{ %
 
     \thispagestyle{empty}
