--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,113 @@
+@article{Solichah2013,
+    abstract = {Business Process Model and Notation (BPMN) is a graphical representation and notation for modeling complex business processes in diagrams. A simple BPMN diagram is easier to understand by all of the business stakeholders than a complex one. It is also easier for the developers to implement the corresponding systems. Complexity metrics can measure the complexity of a diagram. Only a few BPMN complexity metrics are found in the literature as BPMN is a recent development. To propose a new BPMN complexity metric, it is important to find suitable software complexity metrics which can be further adapted to develop a complexity metric for BPMN. This research surveys the existing software complexity metrics and the existing BPMN complexity metrics (i.e. McCabe Cyclomatic Complexity, Control-flow Complexity, and Halstead-based Process Complexity Metrics) to compare their performance and suitability in measuring the complexity of BPMN diagrams. The BPMN diagrams of the business processes of two Enterprise Resource Planning (ERP) open-source systems (i.e. Compiere and Openbravo ERP systems) are used in this research. The metrics values obtained are compared with empirical application and code measurement values (i.e. number of form-fields, number of files of code, and number of classes) of the two open-source systems. This research finds that the Halstead-based Process Complexity that has been proposed in the literature is useful in measuring the data complexity of BPMN diagrams. This means that the Halstead-based Process Complexity can be further elaborated to produce a BPMN complexity measure.},
+    author = {Solichah, Iis and Hamilton, Margaret and Mursanto, Petrus and Ryan, Caspar and Perepletchikov, Mikhail},
+    doi = {10.1109/ICACSIS.2013.6761549},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Object-Testing/06761549.pdf:pdf},
+    isbn = {978-1-4799-4692-1},
+    journal = {2013 International Conference on Advanced Computer Science and Information Systems, ICACSIS 2013},
+    mendeley-groups = {Object Testing},
+    pages = {31--37},
+    title = {{Exploration on software complexity metrics for business process model and notation}},
+    year = {2013}
+}
+
+@article{Ferrer2013,
+    abstract = {CONTEXT
+        Complexity measures provide us some information about software artifacts. A measure of the difficulty of testing a piece of code could be very useful to take control about the test phase. 
+
+            OBJECTIVE
+            The aim in this paper is the definition of a new measure of the difficulty for a computer to generate test cases, we call it Branch Coverage Expectation (BCE). We also analyze the most common complexity measures and the most important features of a program. With this analysis we are trying to discover whether there exists a relationship between them and the code coverage of an automatically generated test suite. 
+
+            METHOD
+            The definition of this measure is based on a Markov model of the program. This model is used not only to compute the BCE, but also to provide an estimation of the number of test cases needed to reach a given coverage level in the program. In order to check our proposal, we perform a theoretical validation and we carry out an empirical validation study using 2600 test programs. 
+
+            RESULTS
+            The results show that the previously existing measures are not so useful to estimate the difficulty of testing a program, because they are not highly correlated with the code coverage. Our proposed measure is much more correlated with the code coverage than the existing complexity measures. 
+
+            CONCLUSION
+            The high correlation of our measure with the code coverage suggests that the BCE measure is a very promising way of measuring the difficulty to automatically test a program. Our proposed measure is useful for predicting the behavior of an automatic test case generator.},
+    author = {Ferrer, Javier and Chicano, Francisco and Alba, Enrique},
+    doi = {10.1016/j.infsof.2013.07.007},
+    file = {:Users/sitdh/Library/Application Support/Mendeley Desktop/Downloaded/Ferrer, Chicano, Alba - 2013 - Estimating software testing complexity.pdf:pdf},
+    journal = {Information and Software Technology},
+    mendeley-groups = {Object Testing},
+    number = {12},
+    pages = {2125--2139},
+    title = {{Estimating software testing complexity}},
+    volume = {55},
+    year = {2013}
+}
+
+@article{McCabe1976,
+    abstract = {This paper describes a graph-theoretic complexity measure and illustrates how it can be used to manage and control program complexity. The paper first explains how the graph-theory concepts apply and gives an intuitive explanation of the graph concepts in programming terms. The control graphs of several actual Fortran programs are then presented to illustrate the correlation between intuitive complexity and the graph-theoretic complexity. Several properties of the graph-theoretic complexity are then proved which show, for example, that complexity is independent of physical size (adding or subtracting functional statements leaves complexity unchanged) and complexity depends only on the decision structure of a program.},
+    author = {McCabe, THOMAS J.},
+    doi = {10.1109/TSE.1976.233837},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Theory-of-Testing/01702388.pdf:pdf},
+    isbn = {2004200111},
+    issn = {0098-5589},
+    journal = {IEEE Transactions on Software Engineering},
+    keywords = {Basis,Fluid flow measurement,Graph theory,Linear programming,National security,Software engineering,Software maintenance,Software measurement,Software systems,Software testing,System testing,complexity measure,control flow,decomposition,graph theory,independence,linear,modularization,programming,reduction,software,testing},
+    mendeley-groups = {Theory of Testing},
+    number = {4},
+    pages = {308--320},
+    pmid = {300},
+    title = {{A Complexity Measure}},
+    url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=1702388},
+    volume = {SE-2},
+    year = {1976}
+}
+
+@book{Naik2008,
+    author = {Naik, Kshirasagar and Tripathy, Priyadarshi},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Books/Naik{\_}{\_}{\_}{\_}Wiley.S-oftware.Testing.and.Quality.Assurance.Theory.and.Practice.Aug.2008.eBook-DDU.pdf:pdf},
+    isbn = {9780471789116},
+    mendeley-groups = {Books},
+    pages = {648},
+    publisher = {Wiley},
+    title = {{Software Testing and Quality Assurance: Theory and Practice}},
+    year = {2008}
+}
+
+@misc{Martin2016,
+    author = {Martin, Robert C.},
+    mendeley-groups = {Theory of Testing},
+    title = {{Princleples of OOD}},
+    url = {http://butunclebob.com/ArticleS.UncleBob.PrinciplesOfOod},
+    urldate = {25 พฤศจิกายน 2559}
+}
+
+@article{kindler2011,
+    abstract = {Object-oriented programming is a suitable technique for representation of concepts and so is convenient for description of (computer) simulation models, as the description can be near to that of simulated systems. Dynamics of simulated systems is often subject to complex control rules with their support being one or more elements belonging to the same system. The description of behaviour of such elements needs often object-oriented representation of concepts that are applied in the control. These concepts belong to a ‘world viewing' that is ontologically quite different from that used in the description of the simulated system. An extreme case is a simulation of a system that contains a controlling element that itself applies simulation for anticipating future consequences of the element decision. This paper is dedicated to application of languages that are not only object oriented but also process oriented and block oriented. Some existing and prepared applications are presented too.},
+    author = {Kindler, Eugene and Krivy, Ivan},
+    doi = {10.1080/03081079.2010.539975},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Theory-of-Testing/Object oriented simulation of systems with sophisticated control.pdf:pdf},
+    journal = {International Journal of General Systems},
+    mendeley-groups = {Theory of Testing},
+    number = {3},
+    pages = {313--343},
+    title = {{Object-oriented simulation of systems with sophisticated control}},
+    url = {http://dx.doi.org/10.1080/03081079.2010.539975},
+    volume = {40},
+    year = {2011}
+}
+
+@article{Huang:1975:APT:356651.356652,
+    address = {New York, NY, USA},
+    author = {Huang, J C},
+    doi = {10.1145/356651.356652},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Theory-of-Testing/p113-huang.pdf:pdf},
+    issn = {0360-0300},
+    journal = {ACM Comput. Surv.},
+    mendeley-groups = {Theory of Testing},
+    number = {3},
+    pages = {113--128},
+    publisher = {ACM},
+    title = {{An Approach to Program Testing}},
+    url = {http://doi.acm.org/10.1145/356651.356652},
+    volume = {7},
+    year = {1975}
+}
+
 @book{miller1977program,
     author = {Miller, E.F. Jr.},
     mendeley-groups = {Theory of Testing},
