--- a/configures.tex
+++ b/configures.tex
@@ -7,7 +7,29 @@
 \usepackage{algorithm} 
 \usepackage{algorithmic}
 
+\usepackage{listings}
+
 \usepackage{rotating}
+\usepackage{multirow}
+\usepackage[usernames,dvipsnames,svgnames,table]{xcolor}
+\definecolor{LightGray}{gray}{0.9}
+
+\usepackage{subcaption}
+\captionsetup[sub]{}
+
+% - - - - - - - - - - - - - - - - - - - -
+% Code listing
+\usepackage{fontspec}
+\setmonofont{Inconsolata}
+% \setmonofont{Monaco}
+
+% - - - - - - - - - - - - - - - - - - - -
+% Code listing
+\usepackage{verbatim}
+
+% - - - - - - - - - - - - - - - - - - - -
+% Equation
+\usepackage{amsmath}
 
 \titleformat{\section}{\bfseries}{\thesection}{0.4em}{}
 \titleformat{\subsection}{\bfseries}{\thesubsection}{0.4em}{}
@@ -18,3 +40,9 @@
 \titlespacing\section{0pt}{12pt plus 4pt minus 2pt}{0pt plus 2pt minus 2pt}
 \titlespacing\subsection{0pt}{12pt plus 4pt minus 2pt}{0pt plus 2pt minus 2pt}
 \titlespacing\subsubsection{0pt}{12pt plus 4pt minus 2pt}{0pt plus 2pt minus 2pt}
+
+\lstdefinestyle{thesiscodestyle}{
+    tabsize=2,
+    breaklines=true,
+    numbers=left
+}
