--- a/thesis-lexicon.tex
+++ b/thesis-lexicon.tex
@@ -40,6 +40,15 @@
 \newcommand{\IntegrationTesting}{การทดสอบผสาน}
 \newcommand{\IntegrationTestingEN}{Integration testing}
 
+\newcommand{\class}{คลาส}
+\newcommand{\classEN}{Class}
+
+\newcommand{\method}{เมธอด}
+\newcommand{\methodEN}{Method}
+
+\newcommand{\attribute}{แอททริบิวต์}
+\newcommand{\attributeEN}{Attribute}
+
 \newcommand{\MethodSignature}{Method signature}
 \newcommand{\MethodSignatureEN}{Method signature}
 
@@ -74,9 +83,9 @@
 \newcommand{\sourcenodeEN}{Source node}
 
 \newcommand{\sinknode}{โหนดปลายทาง}
-\newcommand{\sinknodeEN}{Sink path}
+\newcommand{\sinknodeEN}{Sink node}
 
-\newcommand{\Cyclometric}{Cyclomatic Complexity}
+\newcommand{\Cyclometric}{ความซับซ้อนไซโคลเมทริก}
 \newcommand{\CyclometricEN}{Cyclomatic Complexity}
 
 % - - - - - - - - - - - - - - - - - - - -
