--- a/thesis-lexicon.tex
+++ b/thesis-lexicon.tex
@@ -85,8 +85,8 @@
 \newcommand{\sinknode}{โหนดปลายทาง}
 \newcommand{\sinknodeEN}{Sink node}
 
-\newcommand{\Cyclometric}{ความซับซ้อนไซโคลเมทริก}
-\newcommand{\CyclometricEN}{Cyclomatic Complexity}
+\newcommand{\Cyclomatic}{ความซับซ้อนไซโคลเมทิก}
+\newcommand{\CyclomaticEN}{Cyclomatic Complexity}
 
 % - - - - - - - - - - - - - - - - - - - -
 % NEED BY \makethesiscover
