--- a/thesis-lexicon.tex
+++ b/thesis-lexicon.tex
@@ -61,7 +61,7 @@
 \newcommand{\StaticInformation}{ข้อมูลเชิงสถิต}
 \newcommand{\StaticInformationEN}{Static information}
 
-\newcommand{\ProgramGraph}{กราฟของโปรแกรม}
+\newcommand{\ProgramGraph}{กราฟโปรแกรม}
 \newcommand{\ProgramGraphEN}{Program graph}
 
 \newcommand{\BasisPath}{เส้นทางมูลฐาน}
@@ -87,6 +87,9 @@
 
 \newcommand{\Cyclomatic}{ความซับซ้อนไซโคลเมทิก}
 \newcommand{\CyclomaticEN}{Cyclomatic Complexity}
+
+\newcommand{\inputVector}{เวกเตอร์นำเข้า}
+\newcommand{\inputVectorEN}{Input vector}
 
 % - - - - - - - - - - - - - - - - - - - -
 % NEED BY \makethesiscover
