--- a/related/related.tex
+++ b/related/related.tex
@@ -4,19 +4,11 @@
 เพื่อให้ทราบถึงแนวทางการวิจัยที่สามารถทำได้ จึงจำเป็นจะต้องศึกษาวิธีการ หรือทฤษฎีต่างๆ ซึ่งน่าจะเป็นประโยชน์ต่อการดำเนินการวิจัย
 ให้สามารถดำเนินได้อย่างลุล่วงไว้ดังนี้
 
-\input{related/graph-theory}
-
 \input{related/program-paths}
 
-\input{related/scg-info}
+% \input{related/software-testing}
 
-\input{related/cfg-info}
-
-\input{related/software-testing}
-
-\input{related/regression-testing}
-
-\input{related/java-specification}
+% \input{related/java-specification}
 
 \input{related/test-case-generation}
 
