--- a/related/test-data-generation.tex
+++ b/related/test-data-generation.tex
@@ -1,9 +1,10 @@
-\subsection{การสร้างข้อมูลทดสอบ (Test data generation)}
+\subsection{\FirstTimeDefine{\inputVector}{\inputVectorEN}}
 
+
+\subsection{การสร้างกรณีทดสอบแบบอัตโนมัติ (Automated test case generation)}
 - อธิบายการสร้างข้อมูลทดสอบที่ใช้งานกันอยู่ โดยอ้างจาก "An orchestrated survey of methodologies for automated software test case generation" \cite{Anand2013} - ส่วนที่ 2
 
 \subsubsection{การสร้างข้อมูลทดสอบโดยใช้แบบจำลอง (Test data gerneration in model-based testing)}
-
 - Overview กระบวนการ
 
 - การทำงานตาม Paper: Modelling notations และเครื่องมือ
@@ -25,3 +26,5 @@
 - ประสิทธิผล
 
 - วิธีการที่นำไปใช้งาน
+
+\subsection{เจยูนิต (JUnit)}
