--- a/configures.tex
+++ b/configures.tex
@@ -31,6 +31,10 @@
 % Equation
 \usepackage{amsmath}
 
+% - - - - - - - - - - - - - - - - - - - -
+% Graphic
+\usepackage{tikz}
+
 \titleformat{\section}{\bfseries}{\thesection}{0.4em}{}
 \titleformat{\subsection}{\bfseries}{\thesubsection}{0.4em}{}
 \titleformat{\subsubsection}{\bfseries}{\thesubsubsection}{0.4em}{}
